BPER/DEVF/force-app/main/default/objects/CRM_Claims__c/CRM_Claims__c.object-meta.xml
<CustomObject>
    <label>Reclamo</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Numero Reclamo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reclami</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>