BPER/DEVF/force-app/main/default/objects/CRM_Claims__c/fields/CRM_Author__c.field-meta.xml
<CustomField>
    <fullName>CRM_Author__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>