BPER/DEVF/force-app/main/default/objects/CRM_Claims__c/fields/CRM_DateOpened__c.field-meta.xml
<CustomField>
    <fullName>CRM_DateOpened__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Opened</label>
    <type>DateTime</type>
</CustomField>