BPER/DEVF/force-app/main/default/objects/CRM_Claims__c/fields/CRM_OggettoCausale__c.field-meta.xml
<CustomField>
    <fullName>CRM_OggettoCausale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oggetto Causale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>