BPER/DEVF/force-app/main/default/objects/CRM_Claims__c/fields/CRM_Status__c.field-meta.xml
<CustomField>
    <fullName>CRM_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>