BPER/DEVF/force-app/main/default/objects/CRM_Claims__c/fields/CRM_Subject__c.field-meta.xml
<CustomField>
    <fullName>CRM_Subject__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>