BPER/DEVF/force-app/main/default/objects/CRM_Claims__c/fields/NDW_X_Update_TS__c.field-meta.xml
<CustomField>
    <fullName>NDW_X_Update_TS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NDW_X_Update_TS</label>
    <type>DateTime</type>
</CustomField>